[package]
name = "reglico"
version = "0.1.0"
edition = "2018"
auther = ["Yuma Suzuki<umashiba1@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.9", default-features = false, features = ["macros"] }
pest = "2.0"
pest_derive = "2.0"