[package]
name = "reglico"
version = "0.1.0"
edition = "2018"
auther = ["Yuma Suzuki<umashiba1@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.6"

[dependencies]
phf = { version = "0.9", default-features = false, features = ["macros"] }
lalrpop-util = "0.19.6"
regex = "1"
